--- a/css/style.css
+++ b/css/style.css
@@ -501,7 +501,7 @@
     color: #000000; 
 }
 .navbar-dark .navbar-nav .nav-link:hover {
-    color: #ffd601; 
+    color: #f40000; 
 }
 .icon {
     color: #000000; 
